package coredef;

// ==========================================================
// 系统消息
// ==========================================================

// 一个连接接入
message SessionAccepted
{
	
}

// 已连接
message SessionConnected
{
	
}

// 连接断开
message SessionClosed
{
	
}

// 端初始化
message PeerInit
{
	
}


// 端启动
message PeerStart
{
	
}

// 端停止
message PeerStop
{
	
}

// ==========================================================
// 网关
// ==========================================================


// 路由上行数据
// gate -> backend
message UpstreamACK
{
	optional uint32 MsgID = 1;		// 消息号
	
	optional bytes Data = 2;		// 用户封包
	
	
	optional int64 ClientID = 3;	// 玩家在gate的id
}


// 关闭客户端
// backend -> gate
message CloseClientACK
{
	optional int64 ClientID = 1;
}

// 路由下行数据
// backend -> gate
message DownstreamACK
{
	optional uint32 MsgID = 1;		// 消息号
	
	optional bytes Data = 2;		// 用户封包
	
	
	repeated int64 ClientID = 3;	// 要广播的玩家列表
}




// ==========================================================
// 测试用消息
// ==========================================================
message TestEchoACK
{
	optional string Content = 1;
}
